--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ Default: 1
 
 Brand color: #e67e22
 
-- Tints:
+- Tints: #fdf2e9
 
 - Shades:
 
@@ -23,6 +23,7 @@ Brand color: #e67e22
 
 - Greys:
 #555 
+#333
 
 --- 05 Shadows ---
 
@@ -44,7 +45,7 @@ WHITESPACE SPACING SYSTEM (px)
 
 /* Root font size */
 /* Good trick for easy REM calculations */
-/* 1/16 = 0.625 */
+/* 10/16 = 0.625 */
 /* Do not hardcore font-size values because users will not be able to change it */
 html {
   font-size: 62.5%;
@@ -55,9 +56,10 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
-
 }
 .hero-section {
+  background-color: #fdf2e9;
+  padding: 9.6rem 0;
 }
 
 .hero {
@@ -72,4 +74,61 @@ body {
 
 .hero-section-img {
   width: 100%;
+}
+
+.heading-primary {
+  margin-bottom: 3.2rem;
+  font-size: 5.2rem;
+  font-weight: 700;
+  line-height: 1.05;
+  color: #333;
+  letter-spacing: -0.5px;
+}
+
+.hero-section-desc {
+  margin-bottom: 4.8rem;
+  font-size: 20px;
+  line-height: 1.5;
+}
+
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  font-size: 2rem;
+  padding: 1.6rem 3.2rem;
+  text-decoration: none;
+  border-radius: 15px;
+
+  /* !!! ANIMATIONS, has to be on the original CSS rule */
+  transition: all 300ms;
+}
+
+.btn-primary:link,
+.btn-primary:visited {
+  background-color: #e67e22;
+  color: #fff;
+}
+
+.btn-primary:hover,
+.btn-primary:active {
+  background-color: #cf711f;
+}
+
+.btn-secondary:link,
+.btn-secondary:visited {
+  background-color: #fff;
+  color: #555;
+}
+
+.btn-secondary:hover,
+.btn-secondary:active {
+  background-color: #fdf2e9;
+  /* !!! Trick to make border inside the button and not make the layout jump on hover */
+  box-shadow: inset 0 0 0 3px #555;
+}
+
+/* Helper class */
+/* Helper class should have a !important keyword to ensure it is applied */
+.margin-right-sm {
+  margin-right: 1.6rem !important;
 }
