--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,14 @@
 
 - Font weights: 
 Default: 400
+Medium 500
+Semi-bold 600
+Bold 700
 
 - Line heights: 
 Default: 1
+Small: 1.05
+Paragraph default: 1.6
 
 --- 02 Colors ---
 
@@ -28,6 +33,8 @@ Brand color: #e67e22
 --- 05 Shadows ---
 
 --- 06 Roundness ---
+
+Default: 9px
 
 --- 07 Whitespace ---
 
@@ -52,29 +59,15 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
 }
-.hero-section {
-  background-color: #fdf2e9;
-  padding: 9.6rem 0;
-}
 
-.hero {
-  max-width: 130rem;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.hero-section-txt {
-}
-
-.hero-section-img {
-  width: 100%;
-}
+/*************************/
+/* GENERAL REUSABLE COMPONENTS */
+/*************************/
 
 .heading-primary {
   margin-bottom: 3.2rem;
@@ -85,12 +78,6 @@ body {
   letter-spacing: -0.5px;
 }
 
-.hero-section-desc {
-  margin-bottom: 4.8rem;
-  font-size: 20px;
-  line-height: 1.5;
-}
-
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -98,6 +85,7 @@ body {
   padding: 1.6rem 3.2rem;
   text-decoration: none;
   border-radius: 15px;
+  font-weight: 600;
 
   /* !!! ANIMATIONS, has to be on the original CSS rule */
   transition: all 300ms;
@@ -131,4 +119,122 @@ body {
 /* Helper class should have a !important keyword to ensure it is applied */
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+/*************************/
+/* HEADER */
+/*************************/
+
+.main-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+
+  padding: 0 4.8rem;
+
+  /* Because we want to make header */
+  height: 9.6rem;
+}
+
+.header-logo {
+  height: 2.2rem;
+}
+
+/*************************/
+/* HEADER NAV BAR */
+/*************************/
+
+.main-nav-list {
+  display: flex;
+  list-style: none;
+  gap: 3.2rem;
+  align-items: center;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 300ms;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf711f;
+}
+
+/*************************/
+/* HERO SECTION */
+/*************************/
+
+.hero-section {
+  background-color: #fdf2e9;
+  padding: 4.8rem 0 9.6rem 0;
+}
+
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 0 4.8rem;
+}
+
+.hero-section-img {
+  width: 100%;
+}
+
+.hero-section-desc {
+  margin-bottom: 4.8rem;
+  font-size: 20px;
+  line-height: 1.5;
+}
+
+.delivered-meals {
+  display: flex;
+  align-items: center;
+  margin-top: 8rem;
+  gap: 1.6rem;
+}
+
+.delivered-img {
+  display: flex;
+}
+
+.delivered-img img {
+  width: 4.8rem;
+  height: 4.8rem;
+  border-radius: 50%;
+  margin-right: -1.6rem;
+  border: 3px solid #fdf2e9;
+}
+
+.delivered-img img:last-child {
+  margin-right: 0;
+}
+
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.delivered-text span {
+  color: #e67e22;
 }
