--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,32 @@ body {
   margin-right: 1.6rem !important;
 }
 
+.grid {
+  display: grid;
+  gap: 9.6rem;
+}
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--4-cols {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.container {
+  /* 
+  Standard container sizes: 1200px, 1140px
+  */
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+
 /*************************/
 /* HEADER */
 /*************************/
@@ -237,4 +263,14 @@ body {
 
 .delivered-text span {
   color: #e67e22;
+}
+
+/*************************/
+/* HOW IT WORKS SECTION */
+/*************************/
+
+.section-how {
+  padding: 9.6rem 0;
+  font-size: 50px;
+  background-color: orangered;
 }
