--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,12 @@ Bold 700
 - Line heights: 
 Default: 1
 Small: 1.05
+Medium: 1.2
 Paragraph default: 1.6
+
+- Letter spacing
+-0.5
+0.75
 
 --- 02 Colors ---
 
@@ -69,13 +74,34 @@ body {
 /* GENERAL REUSABLE COMPONENTS */
 /*************************/
 
+.heading-primary,
+.heading-secondary {
+  font-weight: 700;
+  color: #333;
+  letter-spacing: -0.5px;
+}
+
 .heading-primary {
   margin-bottom: 3.2rem;
   font-size: 5.2rem;
-  font-weight: 700;
   line-height: 1.05;
-  color: #333;
-  letter-spacing: -0.5px;
+  margin-bottom: 3.2rem;
+}
+
+.heading-secondary {
+  font-size: 4.4rem;
+  line-height: 1.2;
+  margin-bottom: 9.6rem;
+}
+
+.subheading {
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 1.6rem;
+  letter-spacing: 0.75px;
+  display: block;
+  color: #cf711f;
+  margin-bottom: 1.6rem;
 }
 
 .btn:link,
@@ -271,6 +297,11 @@ body {
 
 .section-how {
   padding: 9.6rem 0;
-  font-size: 50px;
-  background-color: orangered;
+}
+
+.step-img-box {
+}
+
+.step-img {
+  width: 50%;
 }
