--- a/css/style.css
+++ b/css/style.css
@@ -1,178 +1,3 @@
-/*
-
---- 01 Typography ---
-
-- FONT SIZE SYSTEM (px)
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
-- Font weights: 
-Default: 400
-Medium 500
-Semi-bold 600
-Bold 700
-
-- Line heights: 
-Default: 1
-Small: 1.05
-Medium: 1.2
-Paragraph default: 1.6
-
-- Letter spacing
--0.5
-0.75
-
---- 02 Colors ---
-
-Brand color: #e67e22
-
-- Tints: #fdf2e9
-
-- Shades:
-
-- Accents:
-
-- Greys:
-#555 
-#333
-
---- 05 Shadows ---
-
---- 06 Roundness ---
-
-Default: 9px
-
---- 07 Whitespace ---
-
-
-WHITESPACE SPACING SYSTEM (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
-*/
-
-* {
-  padding: 0px;
-  margin: 0px;
-  box-sizing: border-box;
-}
-
-/* Root font size */
-/* Good trick for easy REM calculations */
-/* 10/16 = 0.625 */
-/* Do not hardcore font-size values because users will not be able to change it */
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: "rubik", sans-serif;
-  line-height: 1;
-  font-weight: 400;
-  color: #555;
-}
-
-/*************************/
-/* GENERAL REUSABLE COMPONENTS */
-/*************************/
-
-.heading-primary,
-.heading-secondary {
-  font-weight: 700;
-  color: #333;
-  letter-spacing: -0.5px;
-}
-
-.heading-primary {
-  margin-bottom: 3.2rem;
-  font-size: 5.2rem;
-  line-height: 1.05;
-  margin-bottom: 3.2rem;
-}
-
-.heading-secondary {
-  font-size: 4.4rem;
-  line-height: 1.2;
-  margin-bottom: 9.6rem;
-}
-
-.subheading {
-  text-transform: uppercase;
-  font-weight: 500;
-  font-size: 1.6rem;
-  letter-spacing: 0.75px;
-  display: block;
-  color: #cf711f;
-  margin-bottom: 1.6rem;
-}
-
-.btn:link,
-.btn:visited {
-  display: inline-block;
-  font-size: 2rem;
-  padding: 1.6rem 3.2rem;
-  text-decoration: none;
-  border-radius: 15px;
-  font-weight: 600;
-
-  /* !!! ANIMATIONS, has to be on the original CSS rule */
-  transition: all 300ms;
-}
-
-.btn-primary:link,
-.btn-primary:visited {
-  background-color: #e67e22;
-  color: #fff;
-}
-
-.btn-primary:hover,
-.btn-primary:active {
-  background-color: #cf711f;
-}
-
-.btn-secondary:link,
-.btn-secondary:visited {
-  background-color: #fff;
-  color: #555;
-}
-
-.btn-secondary:hover,
-.btn-secondary:active {
-  background-color: #fdf2e9;
-  /* !!! Trick to make border inside the button and not make the layout jump on hover */
-  box-shadow: inset 0 0 0 3px #555;
-}
-
-/* Helper class */
-/* Helper class should have a !important keyword to ensure it is applied */
-.margin-right-sm {
-  margin-right: 1.6rem !important;
-}
-
-.grid {
-  display: grid;
-  gap: 9.6rem;
-}
-
-.grid--2-cols {
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--3-cols {
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.grid--4-cols {
-  grid-template-columns: repeat(4, 1fr);
-}
-
-.container {
-  /* 
-  Standard container sizes: 1200px, 1140px
-  */
-  max-width: 120rem;
-  padding: 0 3.2rem;
-  margin: 0 auto;
-}
-
 /*************************/
 /* HEADER */
 /*************************/
@@ -288,7 +113,27 @@ body {
 }
 
 .delivered-text span {
-  color: #e67e22;
+  color: #cf711f;
+}
+
+/*************************/
+/* FEATURED IN */
+/*************************/
+
+.section-featured {
+  padding: 4.8rem 0 3.2rem 0;
+}
+
+.logos {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.logos img{
+  height: 3.2rem;
+  filter: brightness(0%);
+  opacity: 70%;
 }
 
 /*************************/
@@ -300,8 +145,59 @@ body {
 }
 
 .step-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+  content: "";
+  display: block;
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.step-img-box::before {
+  width: 60%;
+  /* height: 60%; */
+  /* 60% of PARENT width */
+  padding-bottom: 60%;
+  background-color: #fdf2e9;
+  /* 
+  Determines which element is going to ne on top.
+  HIgher value = higher position
+  */
+  z-index: -2;
+}
+
+.step-img-box::after {
+  width: 50%;
+  padding-bottom: 50%;
+  background-color: #fae5d3;
+  /* 
+  Determines which element is going to ne on top.
+  HIgher value = higher position
+  */
+  z-index: -1;
 }
 
 .step-img {
-  width: 50%;
+  width: 35%;
+}
+
+.step-number {
+  font-size: 9.8rem;
+  font-weight: 600;
+  color: #ccc;
+  margin-bottom: 1.2rem;
+}
+
+.step-desc {
+  font-size: 1.8rem;
+  line-height: 1.8;
 }
