--- a/css/general.css
+++ b/css/general.css
@@ -191,3 +191,39 @@ body {
   padding: 0 3.2rem;
   margin: 0 auto;
 }
+
+/*************************/
+/* MEALS SECTION */
+/*************************/
+
+.meals-row {
+  padding: 9.6rem 0;
+}
+
+.meal {
+}
+
+.list {
+}
+
+.meal-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 600;
+  margin-bottom: 3.2rem;
+}
+
+.meal-attributes {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.meal-attribute {
+  font-size: 1.8rem;
+}
+
+.meal-img {
+  width: 100%;
+}
