--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,20 @@
 /* FEATURED IN */
 /*************************/
 
+.meal-tags {
+  margin-bottom: 1.2rem;
+}
+
+.tag {
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  background-color: #51cf66;
+  border-radius: 1337px;
+  color: #333;
+}
+
 .section-featured {
   padding: 4.8rem 0 3.2rem 0;
 }
@@ -200,4 +214,55 @@
 .step-desc {
   font-size: 1.8rem;
   line-height: 1.8;
+}
+
+/*************************/
+/* MEALS SECTION */
+/*************************/
+
+.meals-row {
+  padding: 9.6rem 0;
+}
+
+.meal {
+  box-shadow: 0 2.4rem 4.8rem rgba(30, 30, 30, 0.1);
+
+}
+
+.list {
+}
+
+.meal-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 600;
+  margin-bottom: 3.2rem;
+}
+
+.meal-attributes {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.meal-attribute {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.meal-img {
+  width: 100%;
+}
+
+.meal-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #e67e22;
+}
+
+strong {
+  font-weight: 500;
 }
