--- a/css/style.css
+++ b/css/style.css
@@ -120,20 +120,6 @@
 /* FEATURED IN */
 /*************************/
 
-.meal-tags {
-  margin-bottom: 1.2rem;
-}
-
-.tag {
-  display: inline-block;
-  padding: 0.4rem 0.8rem;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  background-color: #51cf66;
-  border-radius: 1337px;
-  color: #333;
-}
-
 .section-featured {
   padding: 4.8rem 0 3.2rem 0;
 }
@@ -144,7 +130,7 @@
   justify-content: space-around;
 }
 
-.logos img{
+.logos img {
   height: 3.2rem;
   filter: brightness(0%);
   opacity: 70%;
@@ -226,7 +212,13 @@
 
 .meal {
   box-shadow: 0 2.4rem 4.8rem rgba(30, 30, 30, 0.1);
+  border-radius: 11px;
+  /* !!! WILL MAKE IMAGE CORNERS ROUND BECAUSE CONTAINER IS ROUND */
+  overflow: hidden;
+}
 
+.meal-content {
+  padding: 3.2rem 4.8rem;
 }
 
 .list {
@@ -255,6 +247,9 @@
 
 .meal-img {
   width: 100%;
+  /* border-radius: 11px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0; */
 }
 
 .meal-icon {
@@ -265,4 +260,34 @@
 
 strong {
   font-weight: 500;
+}
+
+.meal-tags {
+  margin-bottom: 1.2rem;
+  display: flex;
+  gap: 0.4rem;
+}
+
+.tag {
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  border-radius: 1337px;
+  font-weight: 600;
+}
+
+.tag--vegetarian {
+  background-color: #51cf66;
+  color: #333;
+}
+
+.tag--vegan {
+  background-color: #94d82d;
+  color: #333;
+}
+
+.tag--paleo {
+  background-color: #ffd43b;
+  color: #333;
 }
