--- a/css/general.css
+++ b/css/general.css
@@ -157,6 +157,22 @@ body {
   box-shadow: inset 0 0 0 3px #555;
 }
 
+.link:link,
+.link:visited {
+  color: #e67e22;
+  text-decoration: none;
+  /* !!! currentColor = text color */
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 300ms;
+}
+
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
+}
+
 /* Helper class */
 /* Helper class should have a !important keyword to ensure it is applied */
 .margin-right-sm {
@@ -193,3 +209,10 @@ body {
   margin: 0 auto;
 }
 
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+  text-align: center;
+}
