--- a/css/style.css
+++ b/css/style.css
@@ -323,3 +323,37 @@ strong {
   text-align: center;
   font-size: 1.8rem;
 }
+
+/*************************/
+/* TESTIMONIALS SECTION */
+/*************************/
+
+.testimonials-section {
+
+}
+
+.testimonials {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 4.8rem
+}
+
+.testimonial {
+}
+
+.testimonial-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 1.6rem;
+}
+
+.testimonial-name {
+  font-size: 1.6rem;
+  color: #777;
+}
+
+.testimonial-img {
+  width: 6.4rem;
+  border-radius: 50%;
+  margin-bottom: 1.2rem;
+}
