--- a/css/style.css
+++ b/css/style.css
@@ -298,26 +298,6 @@ strong {
   color: #333;
 }
 
-.list {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  gap: 1.6rem;
-}
-
-.list-icon {
-  width: 3rem;
-  height: 3rem;
-  color: #e67e22;
-}
-
-.list-item {
-  font-size: 1.2rem;
-  display: flex;
-  align-items: center;
-  gap: 1.6rem;
-}
-
 .all-recipes {
   text-align: center;
   font-size: 1.8rem;
@@ -385,4 +365,55 @@ strong {
   /* Remove spacing */
   display: block;
   width: 100%;
+}
+
+/*************************/
+/* PRICING SECTION */
+/*************************/
+
+.pricing-section {
+  padding: 9.6rem 0;
+}
+
+.pricing-plan {
+
+}
+
+.plan-name {
+  font-weight: 600;
+  color: #cf711f;
+  font-size: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75;
+  margin-bottom: 3.2rem;
+}
+
+.plan-price {
+  font-size: 6.2rem;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 1.6rem;
+}
+
+.plan-price span {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-right: 0.8rem;
+}
+
+.plan-text {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: #6f6f6f;
+}
+
+.plan-header {
+  text-align: center;
+  margin-bottom: 4.8rem;
+}
+
+.plan-sign-up {
+  margin-top: 4.8rem;
+  display: flex;
+  justify-content: center;
 }
