--- a/css/general.css
+++ b/css/general.css
@@ -214,6 +214,10 @@ body {
   margin-bottom: 4.8rem !important;
 }
 
+.margin-bottom-lrg {
+  margin-bottom: 9.6rem;
+}
+
 .center-text {
   text-align: center;
 }
