--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,10 @@ strong {
 }
 
 .pricing-plan {
-
+  background-color: #fdf2e9;
+  border-radius: 11px;
+  width: 75%;
+  justify-items: end;
 }
 
 .plan-name {
@@ -416,4 +419,31 @@ strong {
   margin-top: 4.8rem;
   display: flex;
   justify-content: center;
+}
+
+.pricing-plan--starter {
+  justify-self: end;
+  background-color: #fff;
+  border: 2px solid #fdf2e9;
+  /* Compensates 2px border */
+  padding: 4.6rem;
+}
+
+.pricing-plan--complete {
+  position: relative;
+  padding: 4.8rem;
+  overflow: hidden;
+}
+
+.pricing-plan--complete::after {
+  position: absolute;
+  content: "BEST VALUE";
+  font-size: 1.8rem;
+  font-weight: bold;
+  right: -10%;
+  top: 6%;
+  background-color: #ffd43b;
+  color: #333;
+  padding: 0.8rem 3.2rem;
+  transform: rotate(45deg);
 }
