--- a/css/style.css
+++ b/css/style.css
@@ -479,3 +479,35 @@ strong {
   line-height: 1.6rem;
   text-align: center;
 }
+
+/*************************/
+/* CTA SECTION */
+/*************************/
+
+.cta-section {
+  padding: 9.6rem 0;
+}
+
+.cta {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  /* background-color: #e67e22; */
+  height: 50rem;
+  box-shadow: 0 2.4rem 4.8rem rgba(30, 30, 30, 0.15);
+  border-radius: 11px;
+  background-image: linear-gradient(to right bottom,#eb984e, #e67e22);
+  overflow: hidden;
+}
+
+.cta-form {
+
+}
+
+.cta-support-img {
+  background-image:  
+  linear-gradient(to right bottom, #eb974e5c, #e67d225c), 
+  url(/img/eating.jpg);
+
+  background-size: cover;
+  background-position: center;
+}
