CTA form layout

--- a/css/style.css
+++ b/css/style.css
@@ -499,8 +499,14 @@ strong {
   overflow: hidden;
 }
 
-.cta-form {
+.cta-form-container {
+  color: #45260a;
+  padding: 4.8rem 6.4rem;
+}
 
+.cta-form-container .heading-secondary {
+  color: #45260a;
+  margin-bottom: 3.2rem;
 }
 
 .cta-support-img {
@@ -510,4 +516,17 @@ strong {
 
   background-size: cover;
   background-position: center;
+}
+
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 4.8rem;
+}
+
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
 }
