--- a/css/general.css
+++ b/css/general.css
@@ -32,6 +32,8 @@ Brand color: #e67e22
 - Accents:
 
 - Greys:
+#888
+#767676 (lightest gray allowed on white)
 #6f6f6f (lightest grey allowed on #fdf2e9)
 #555 
 #333
