--- a/css/queries.css
+++ b/css/queries.css
@@ -5,7 +5,7 @@
 /* !!!(?) rem should be used, rem has bugs in some browsers when used with queries */
 
 /*************************/
-/* Bellow 1344px */
+/* Bellow 1344px (smaller laptops) */
 /*************************/
 @media(max-width: 84em) {
   .hero {
@@ -18,5 +18,41 @@
 
   .gallery {
     grid-template-columns: 1fr 1fr;
+  }
+}
+
+/*************************/
+/* Bellow 1200px (landscape tablets) */
+/*************************/
+@media(max-width: 75em) {
+  html {
+    /* 9px / 16px = 56.25% */
+    font-size: 56.25%;
+  }
+
+  .heading-secondary {
+    font-size: 3.6rem;
+  }
+
+  .heading-tretriary {
+    font-size: 2.4rem;
+  }
+
+  .grid {
+    column-gap: 4.8rem;
+    row-gap: 6.4rem;
+  }
+
+  .hero {
+    gap: 4.8rem;
+  }
+
+  .main-nav-list {
+    gap: 3.2rem;
+  }
+
+  .testimonials-container {
+    /* top & bottom 9.6rem to stay consistent */
+    padding: 9.6rem 3.2rem;
   }
 }
