--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,10 @@
   width: 100%;
 }
 
+.hero-img-box {
+
+}
+
 .hero-section-desc {
   margin-bottom: 4.8rem;
   font-size: 20px;
@@ -225,7 +229,7 @@
 }
 
 .meal-content {
-  padding: 3.2rem 4.8rem;
+  padding: 3.2rem 4.8rem 4.8rem 4.8rem;
 }
 
 .list {
