--- a/css/queries.css
+++ b/css/queries.css
@@ -117,4 +117,66 @@
   .btn--form {
     margin-top: 1.2rem;
   }
+
+  .btn-mobile-nav {
+    display: block;
+  }
+
+  .main-header-nav {
+    background-color: rgba(255, 255, 255, 0.963);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    transition: all 400ms;
+    transform: translateX(100%);
+
+    /* Cant do that, animations will not work */
+    /* display: none; */
+
+    /* !!! DISABLE ELEMENT !!! */
+
+    /* 1. Visualy */
+    opacity: 0;
+
+    /* 2. Disable input */
+    pointer-events: none;
+
+    /* 3. Hide from screen readers */
+    visibility: hidden;
+  }
+
+  .nav-open .main-header-nav {
+    /* !!! UNHIDE ELEMENT !!! */
+
+    /* 1. Visualy */
+    opacity: 1;
+
+    /* 2. Enable input */
+    pointer-events: auto;
+
+    /* 3. Show to screen readers */
+    visibility: visible;
+
+    transform: translateX(0);
+  }
+
+  .nav-open .icon-mobile-nav[name="close-outline"] {
+    display: block;
+  }
+
+  .nav-open .icon-mobile-nav[name="menu-outline"] {
+    display: none;
+  }
+
+  .main-nav-list {
+    flex-direction: column;
+    gap: 4.8rem;
+  }
+
+  .main-nav-link:link,
+  .main-nav-link:visited {
+    font-size: 3rem;
+  }
 }
