--- a/css/queries.css
+++ b/css/queries.css
@@ -180,3 +180,42 @@
     font-size: 3rem;
   }
 }
+
+/*************************/
+/* Bellow 700px (smaller tablets) */
+/*************************/
+@media (max-width: 44em) {
+  .grid--3-cols,
+  .grid--4-cols {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .diets {
+    grid-column: 1/-1;
+    justify-self: center;
+  }
+
+  .heading-secondary {
+    margin-bottom: 4.8rem;
+  }
+
+  .pricing-plan {
+    width: 100%;
+  }
+
+  .gird--footer {
+    grid-template-columns: repeat(6, 1fr);
+    row-gap: 4.8rem;
+    column-gap: 4.8rem;
+  }
+
+  .nav-col {
+    grid-row: 1;
+    grid-column: span 2;
+  }
+
+  .logo-col,
+  .address-col {
+    grid-column: span 3;
+  }
+}
