--- a/css/queries.css
+++ b/css/queries.css
@@ -121,6 +121,7 @@
   .btn-mobile-nav {
     display: block;
     z-index: 1337;
+    background-color: rgba(255, 255, 255, 0);
   }
 
   .main-header-nav {
